<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1">

    <TableRow>
        <TextView
            android:text="@string/codasignatura" />
        <EditText
            android:id="@+id/editCodasignatura"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/codtipoeval" />
        <EditText
            android:id="@+id/editCodtipoeval"
            android:inputType="text"
            android:maxLength="2" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/codciclo" />
        <EditText
            android:id="@+id/editCodciclo"
            android:inputType="text"
            android:maxLength="5" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/evaluacion_codigo" />
        <EditText
            android:id="@+id/editCodigo"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/evaluacion_numero" />
        <EditText
            android:id="@+id/editNumeval"
            android:inputType="number"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/fecha" />
        <EditText
            android:id="@+id/editFechaeval"
            android:inputType="date"/>
    </TableRow>

    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="insertarEvaluacion"
            android:text="@string/insertar" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="limpiarTexto"
            android:text="Limpiar" />
    </TableRow>

</TableLayout>